--- a/hexagen.css
+++ b/hexagen.css
@@ -7,23 +7,25 @@ body {
 }
 
 h1 {
-    color: rgb(255, 255, 255);
+    color: rgb(99, 98, 98);
     font-weight: 700;
+    font-size: 3em;
 }
 
 p {
-    color: rgb(255, 255, 255);
+    color: rgb(99, 98, 98);
     font-size: 18px;
+    margin-bottom: 2em;
 }
 
-.flex-container {
+.page__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin: auto 80px;
 }
 
-.flex-container>div {
+.page__container>div {
     width: 200px;
     height: 200px;
     background: gray;
@@ -32,25 +34,34 @@ p {
     padding-top: 40px;
 }
 
-.header_container {
+.header__container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin: auto 80px;
+    width: 100%;
+    height: 300px;
+    /* margin: auto; */
     margin-bottom: 15px;
-    background: #6A9113;
+    /* gradient ************************/
+    background: #d9a7c7;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #141517, #6A9113);
+    background: -webkit-linear-gradient(to right, #fffcdc, #d9a7c7);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #6A9113, #141517);
+    background: linear-gradient(to right, #fffcdc, #d9a7c7);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 
 }
 
+.page__input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* width: 50%; */
+}
+
 button {
-    width: 100px;
+    /* width: 100px; */
     padding: 10px 10px;
     font-weight: 500;
     /* font-size: 1em; */
@@ -58,18 +69,18 @@ button {
     display: inline-block;
     border-radius: 5px;
     margin: 2px;
-    border: 0px;
+    border: 0;
 }
 
 #stopBtn {
-    background-color: #ff0000;
+    background-color: #d46f6f;
 }
 
 #generateBtn {
-    background-color: #00ff00;
+    background-color: #79b679;
 }
 
-#userData {
+#page__control {
     margin: 10px;
     border-radius: 5px;
     width: 250px;
@@ -77,5 +88,4 @@ button {
     display: inline-block;
     border: 0px;
     text-align: center;
-
 }
